--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "gh-pages": "^5.0.0",
     "vite": "^4.4.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
